--- a/Admin/UI/tsconfig.json
+++ b/Admin/UI/tsconfig.json
@@ -12,7 +12,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "checkjs": true,
+    "checkJs": true,
 
     /* Linting */
     "strict": true,
