update App.jsx + use DB online

--- a/Back-End/.env
+++ b/Back-End/.env
@@ -1,2 +1,4 @@
-# MONGO_URL = "mongodb://localhost:27017"
-MONGO_URL= "mongodb://127.0.0.1:27017"
+MONGO_URL = "mongodb+srv://phamkhanh99889988:ic9q5LRplIqe2YOh@cluster0.bz7m9.mongodb.net/"
+# username: phamkhanh99889988
+# password: ic9q5LRplIqe2YOh
+# MONGO_URL= "mongodb://127.0.0.1:27017"
